pegasus/src/Pegasus/Compiler/tests/invalidMOF/badQualifierDecl14.mof
/* Extra Spaces in Scope keywords def. This should be legal */
Qualifier Abstract : boolean = false, 
    Scope(  class  , association, indication), 
    Flavor(EnableOverride, Restricted);
